<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Speed</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new_tab">New Tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_add_bookmark">Add Bookmark</string>
    <string name="action_desktop_mode">Desktop Mode</string>
    <string name="action_copy">Copy Link</string>
    <string name="action_forward">Forward</string>
    <string name="bookmark_edit">edit</string>
    <string name="bookmark_delete">delete</string>
    <string name="bookmark_newtab">open in new tab</string>
    <string name="google">Google</string>
    <string name="advanced">Advanced</string>
    <string name="basic">Basic</string>
    <string name="settings">Settings</string>
    <string name="location">Location Access</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User Agent</string>
    <string name="history">History</string>
    <string name="clear_history">Clear history</string>
    <string name="clear_data">Clear Browsing Data</string>
    <string name="older">Older</string>
    <string name="latest">Latest</string>
    <string name="newer">Newer</string>
    <string name="email">Email me</string>
    <string name="flash">Enable Adobe Flash</string>
    <string name="mobile">View as Mobile</string>
    <string name="desk">View as Desktop</string>
    <string name="custom">View as custom user agent</string>
    <string name="home">Homepage</string>
    <string name="settingshelp">Settings only apply to new tabs</string>
    <string name="fullscreen">Full-screen Mode</string>
    <string name="tabstack">Stack tabs from top</string>
    <string name="java">Enable JavaScript</string>
    <string name="saveTab">Restore your tabs if they\'re lost</string>
    <string name="settings_title">Settings</string>
    <string name="download">Download Location</string>
    <string name="settings_advanced">Advanced Settings</string>
    <string name="source">Source Code</string>
    <string name="license">License</string>
    <string name="github">github.com/anthonycr/Lightning-Browser</string>
    <string name="apache">Apache License 2.0</string>
    <string name="title_activity_new_settings">NewSettings</string>
    <string name="action_settings">Settings</string>
    <string name="version">Application Version</string>
    <string name="clear_cache_exit">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block Images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Cookies</string>
    <string name="enable_cookies">Enable Cookies</string>
    <string name="importbookmarks">Import bookmarks from Browser</string>
    <string name="size">Text Size</string>
    <string name="page_source">View Page Source</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search Engine</string>
    <string name="search_hint">Search</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="open_link">Open link</string>
    <string name="copy_link">Copy link address</string>
    <string name="open_link_tab">Open in new tab</string>
    <string name="open_link_incognito">Open in new incognito tab</string>
    <string name="block_url">Add url to adblock list</string>
    <string name="open_image">Open image</string>
    <string name="download_image">Download image</string>
    <string name="open_image_tab">Open image in new tab</string>
    <string name="openLinksBackground">Open links in background tab</string>
    <string name="restore">Restore lost tabs on start</string>
    <string name="keep_open">Exit browser on last tab close</string>
    <string name="hardware_rendering">Use hardware rendering</string>
    <string name="manage_adblock">Manage adblock list</string>
    <string name="stock_browser_unavailable">No stock browser detected</string>
    <string name="stock_browser_available">Supported stock browser detected</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank Page</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search Engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file?</string>
    <string name="action_cancel">CANCEL</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_adobe_dead">We\'re sorry, Google made some changes, and Adobe Flash no longer works on Android 4.4+</string>
    <string name="dialog_adobe_not_installed">Adobe Flash Player was not detected.\nPlease install Flash Player.</string>
    <string name="dialog_adobe_unsupported">Adobe Flash does not support Andoid 4.2 and above, and will crash the browser. Please do not report any crashes that occur if you enable Flash.</string>
    <string name="title_user_agent">User Agent</string>
    <string name="title_download_location">Download Location</string>
    <string name="title_custom_homepage">Custom Homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="dialog_reflow_warning">We\'re sorry, Google made some changes, and Text Reflow no longer works on Android 4.4+</string>
    <string name="title_clear_history">Clear History</string>
    <string name="title_clear_cookies">Clear Cookies</string>
    <string name="dialog_history">Would you like to clear all browser history?</string>
    <string name="dialog_cookies">Would you like to clear all browser cookies?</string>
    <string name="dialog_cache">Would you like to clear all browser cache?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text Size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="dialog_import_error">No browser was detected to import bookmarks from.</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit Bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">Incognito Mode</string>
    <string name="action_incognito_tab">New Incognito Tab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in Page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">Can only download \"http\" or \"https\" URLs.</string>
    <string name="download_no_sdcard_dlg_title" >No SD card</string>
    <string name="download_no_sdcard_dlg_msg" >USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="download_sdcard_busy_dlg_msg" >The storage is busy. To allow downloads, touch Turn Off USB Storage in the notification.</string>
    <string name="incognito_cookies">Enable Cookies in Incognito Mode</string>
    <string name="title_flash">Adobe Flash</string>
    <string name="action_manual">Manual</string>
    <string name="action_auto">Auto</string>
    <string name="action_follow_me">Contact Me</string>
    <string name="url_twitter">chemxrs@gmail.com</string>
    <string name="cache">Cache</string>
    <string name="clear_cache">Clear cache</string>
    <string name="message_cache_cleared">Cache Cleared</string>
    <string name="message_import">Bookmarks Were Imported</string>
    <string name="message_clear_history">History Cleared</string>
    <string name="message_cookies_cleared">Cookies Cleared</string>
    <string name="max_tabs">Max Tabs Reached</string>
    <string name="message_text_copied">Text copied to clipboard</string>
    <string name="message_link_copied">Link copied to clipboard</string>
    <string name="custom_url">Custom URL</string>
    <string name="message_blocked_local">Local file has been blocked from loading</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="suggestion">Search for</string>
    <string name="block_ads">Block Ads</string>
    <string name="message_untrusted_certificate">The certificate of the site is not trusted. Proceed anyway?</string>
    <string name="title_form_resubmission">Form Resubmission</string>
    <string name="message_form_resubmission">Would you like to resend the data?</string>
    <string name="message_location">\nWould like to use your location</string>
    <string name="action_allow">Allow</string>
    <string name="action_dont_allow">Don\'t Allow</string>
    <string name="title_sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="google_suggestions">Search Suggestions</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="title_adblock">AdBlock</string>
    <string name="message_adblock">AdBlock is currently only available in the browser\'s paid version, Lightning Browser+. It is available to download on Google Play.</string>
    <string name="enable_orbot">Enable Orbot</string>
    <string name="swipe_tabs">Swipe Tab Button to Switch Tabs</string>
    <string name="showBottomDrawer">Bottom Drawer Layout</string>
    <string name="showBottomToolbar">Always Show Bottom Toolbar</string>
    <string name="use_tor_prompt">It looks like you have Orbot installed. Do you want to use Tor?</string>
    <string name="install_orbot">Please install Orbot in order to proxy with Tor.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="folder_default">Default</string>
    <string name="folder_custom">Custom</string>
    <string name="untitled">Untitled</string>
    <string name="mozilla_license">Mozilla Public License 2.0</string>
    <string name="credits">Credits</string>
    <string name="url_contents">URL Box Contents</string>
        <string name="tabs">Tabs</string>
</resources>