<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:maxHeight="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="20dp"
        android:textSize="17dp"
        android:textColor="?attr/numberColor"
        android:background="?attr/selectableItemBackground" />

    <TextView
        android:id="@+id/blockUrl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/block_url"
        android:textSize="17dp"
        android:textColor="?attr/numberColor"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/openLink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/open_link"
        android:textSize="17dp"
        android:textColor="?attr/numberColor"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/copyLink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/copy_link"
        android:textSize="17dp"
        android:textColor="?attr/numberColor"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/newTab1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/open_link_incognito"
        android:textSize="17dp"
        android:textColor="?attr/numberColor"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/newTab2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/open_link_tab"
        android:textSize="17dp"
        android:textColor="?attr/numberColor"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>


</LinearLayout>