<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/right_drawer"
    android:layout_width="@dimen/navigation_width"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="?attr/drawerBackground"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/dividerColor"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/plusIcon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/action_new_tab"
            android:gravity="center_vertical"
            android:src="?attr/tabDrawable" >
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/plusIcon"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:text="@string/tabs"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerColor" />

    <com.browser.Speed.utils.CustomViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"/>

    <View
        android:id="@+id/lineView"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="?attr/dividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/dividerColor"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3" >

        <RelativeLayout
            android:id="@+id/new_tab_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/listBackground"
            android:clickable="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/action_new_tab"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:src="?attr/plusDrawable" >
            </ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/action_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/listBackground"
            android:clickable="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/action_back"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:src="?attr/arrowBackDrawable" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/action_forward"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/listBackground"
            android:clickable="true" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/action_forward"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="4dp"
                android:src="?attr/arrowForwardDrawable" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>