<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/settingsBackground">

    <android.support.v7.widget.Toolbar
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?toolbarSettingsBackground"
        android:elevation="2dp"
        android:minHeight="?attr/actionBarSize"
        custom:contentInsetEnd="0dp"
        custom:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null">

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/settings_advanced"
                android:textSize="20dp"
                android:textColor="?attr/settingsTextColor"/>

            <ImageView
                android:id="@+id/help"
                android:layout_width="56dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:padding="16dp"
                android:src="@drawable/ic_help"
                android:visibility="gone"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rAllowPopups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="30dp"
                        android:text="@string/window"
                        android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="30dp"
                        android:text="@string/recommended"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/light" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cbAllowPopups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/rOpenLinksBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="30dp"
                    android:text="@string/openLinksBackground"
                    android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/cbOpenLinksBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/rRestoreTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="30dp"
                    android:text="@string/restore"
                    android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/cbRestoreTabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/rExitOnTabClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="30dp"
                    android:text="@string/keep_open"
                    android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/cbExitOnTabClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/rHardwareRendering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="30dp"
                    android:text="@string/hardware_rendering"
                    android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <CheckBox
                    android:id="@+id/cbHardwareRendering"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

            <RelativeLayout
                android:id="@+id/rAdblockList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="30dp"
                    android:text="@string/manage_adblock"
                    android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

            <LinearLayout
                android:id="@+id/rUrlBarContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/listChoiceBackgroundIndicator"
                android:minHeight="60dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="@string/url_contents"
                    android:textColor="?attr/settingsTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/urlText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/light" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/dividerColor" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/adblock_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingTop="5dp"
        android:clipToPadding="false"/>

</LinearLayout>